Add Permission Set for extra validation

--- a/src/package.xml
+++ b/src/package.xml
@@ -4,5 +4,13 @@
         <members>*</members>
         <name>ApexClass</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>CustomPermission</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>PermissionSet</name>
+    </types>
     <version>47.0</version>
 </Package>
